--- a/Graphics.settings
+++ b/Graphics.settings
@@ -6,5 +6,5 @@
     "m_Quality": 0,
     "m_VSync": 0,
     "m_FrameRateCap": -1,
-    "m_VerticalFOV": 50.625
+    "m_VerticalFOV": 50.94598388671875
 }
