--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.ide.rider": "3.0.13",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.3.0",
     "com.unity.postprocessing": "3.2.1",
     "com.unity.probuilder": "5.0.4",
     "com.unity.purchasing": "4.1.3",
