--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -23,8 +23,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.6",
     "com.unity.xr.legacyinputhelpers": "2.1.9",
-    "org.wizardscode.devlogger": "file:E:/WizardsCode/Packages/DevLogger-Unity-Package",
-    "wizardscode.character": "file:E:/WizardsCode/Packages/Character-Unity-Package",
+    "wizardscode.character": "https://github.com/TheWizardsCode/Character-Unity-Package.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
